{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 709,
  "lineage": "9536b13b-02b8-b209-d3b3-9934dace0e88",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:security-group/sg-0cba624c071f12e5a",
            "description": "Security group for EC2 instances in wordpress VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cba624c071f12e5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-ec2-sg",
            "name_prefix": "",
            "owner_id": "894208094359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ec2-sg"
            },
            "tags_all": {
              "Name": "wordpress-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:security-group/sg-0d5f122fefbe1473e",
            "description": "Security group for ElastiCache in wordpress VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5f122fefbe1473e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "wordpress-redis-sg",
            "name_prefix": "",
            "owner_id": "894208094359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-redis-sg"
            },
            "tags_all": {
              "Name": "wordpress-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:security-group/sg-09af4cd03f5cccf2c",
            "description": "Security group for RDS in wordpress VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09af4cd03f5cccf2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-rds-sg",
            "name_prefix": "",
            "owner_id": "894208094359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-rds-sg"
            },
            "tags_all": {
              "Name": "wordpress-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e872aee57663ae2d",
            "arn": "arn:aws:ec2:eu-central-1:894208094359:instance/i-0154dc2477f459157",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0154dc2477f459157",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bc3fcc78b646671",
            "private_dns": "ip-10-0-1-85.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.85",
            "public_dns": "ec2-18-192-58-115.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.58.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2fa4cfdfcec51f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c211d8b9f0126be",
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "wordpress"
            },
            "vpc_security_group_ids": [
              "sg-0cba624c071f12e5a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "data.aws_availability_zones.available",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:network-acl/acl-0dbf7f334780e08a6",
            "default_network_acl_id": "acl-0dbf7f334780e08a6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dbf7f334780e08a6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "894208094359",
            "subnet_ids": [
              "subnet-00624197ee7adb16c",
              "subnet-01c211d8b9f0126be",
              "subnet-0296ae0543941288d",
              "subnet-0389266be7f859850",
              "subnet-06a6df56dcc70c2f9",
              "subnet-0991cc957c60da05d",
              "subnet-0b7a44c25e7e7e17e",
              "subnet-0ea993b482e21dacd"
            ],
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:route-table/rtb-07585ceb737ccead0",
            "default_route_table_id": "rtb-07585ceb737ccead0",
            "id": "rtb-07585ceb737ccead0",
            "owner_id": "894208094359",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:security-group/sg-0ba55ad5e0c651949",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ba55ad5e0c651949",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "894208094359",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbd9937ace4d207b",
            "arn": "arn:aws:ec2:eu-central-1:894208094359:elastic-ip/eipalloc-0cbd9937ace4d207b",
            "association_id": "eipassoc-0da39f3c5b427c9fa",
            "domain": "vpc",
            "id": "eipalloc-0cbd9937ace4d207b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09aadbff9cdbdb196",
            "private_dns": "ip-10-0-1-215.eu-central-1.compute.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-3-78-98-228.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.98.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:internet-gateway/igw-0be20945f93e536b6",
            "id": "igw-0be20945f93e536b6",
            "owner_id": "894208094359",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbd9937ace4d207b",
            "association_id": "eipassoc-0da39f3c5b427c9fa",
            "connectivity_type": "public",
            "id": "nat-0b984527a2233fbb3",
            "network_interface_id": "eni-09aadbff9cdbdb196",
            "private_ip": "10.0.1.215",
            "public_ip": "3.78.98.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c211d8b9f0126be",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0444149e1a20b92e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b984527a2233fbb3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be20945f93e536b6",
            "id": "r-rtb-09af1274ad9038e3b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09af1274ad9038e3b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:route-table/rtb-0444149e1a20b92e8",
            "id": "rtb-0444149e1a20b92e8",
            "owner_id": "894208094359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b984527a2233fbb3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:route-table/rtb-09af1274ad9038e3b",
            "id": "rtb-09af1274ad9038e3b",
            "owner_id": "894208094359",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be20945f93e536b6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1fe7d1c02ad9016",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "subnet_id": "subnet-0389266be7f859850"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824a81136afc9447",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "subnet_id": "subnet-06a6df56dcc70c2f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f5b0c7b1a668421",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "subnet_id": "subnet-0b7a44c25e7e7e17e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0770fff18330dfbc6",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "subnet_id": "subnet-0296ae0543941288d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3d9fe63740006bd",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "subnet_id": "subnet-00624197ee7adb16c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0491a3b66f3a9651c",
            "route_table_id": "rtb-0444149e1a20b92e8",
            "subnet_id": "subnet-0991cc957c60da05d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d1dbc99544d3862",
            "route_table_id": "rtb-09af1274ad9038e3b",
            "subnet_id": "subnet-01c211d8b9f0126be"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075e7c1e7ebd190c7",
            "route_table_id": "rtb-09af1274ad9038e3b",
            "subnet_id": "subnet-0ea993b482e21dacd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-0389266be7f859850",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0389266be7f859850",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-06a6df56dcc70c2f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a6df56dcc70c2f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-0b7a44c25e7e7e17e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7a44c25e7e7e17e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-0296ae0543941288d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296ae0543941288d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-00624197ee7adb16c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00624197ee7adb16c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-0991cc957c60da05d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0991cc957c60da05d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-01c211d8b9f0126be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c211d8b9f0126be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:subnet/subnet-0ea993b482e21dacd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea993b482e21dacd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "894208094359",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-03d47e88f80e8cf32"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:894208094359:vpc/vpc-03d47e88f80e8cf32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbf7f334780e08a6",
            "default_route_table_id": "rtb-07585ceb737ccead0",
            "default_security_group_id": "sg-0ba55ad5e0c651949",
            "dhcp_options_id": "dopt-0b5994f5a1a765145",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d47e88f80e8cf32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07585ceb737ccead0",
            "owner_id": "894208094359",
            "tags": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "wordpress",
              "Name": "wordpress",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            }
          }
        }
      ]
    }
  ]
}